[package]
name = "actix-reverse-proxy"
version = "0.1.0"
authors = ["Felipe Noronha <felipenoris@gmail.com>"]
repository = "https://github.com/felipenoris/actix-reverse-proxy.git"
description = "A simple configurable Reverse Proxy for the Actix framework."
license = "MIT"

[lib]
name = "actix_reverse_proxy"
path = "src/lib.rs"

[dependencies]
actix-web = "0.7"
futures = "0.1"
lazy_static = "1.1"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
